midpoint-live-demo/overlays/renaissance2/network-policy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: demo
spec:
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
    - toEndpoints:
        - {}
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.100.1.0/24
            - 10.100.0.0/24
            - 10.100.2.0/24
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress-nginx
